誤字の修正
誤字の修正

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p>&nbsp;これらの収集されたデータは、それぞれ以下の目的に利用されます。&nbsp;</p>
 <li>クラッシュデータ：アプリクラッシュへの対応
 </li>
-  <li>パフォーマンスデー：アプリパフォーマンスの最適化
+  <li>パフォーマンスデータ：アプリパフォーマンスの最適化
   </li>
   <li>その他の診断データ：アプリの改善&nbsp;
   </li>
