Google Play ストアについて追記
Google Play ストアについて追記

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div>
   <h1>プライバシーポリシー</h1>
-  <p>&nbsp;AppStoreの『2dshooting』は、iOS、iPadOS向け無料アプリです。</p>
+  <p>&nbsp;AppStore、Google Play ストアの『Aircraft-1』は、スマートフォン、タブレット向け無料アプリです。</p>
 </div>
 <div>
   <b2> <strong>収集する情報と利用目的</strong> </b2>
@@ -27,12 +27,12 @@
 </div>
 <div>
   <b2><strong>プライバシーポリシーの変更</strong> </b2>
-  <p>&nbsp;プライバシーポリシーは随時更新されます。変更がないか定期的に当ページを確認することを推奨します。このプライバシーポリシーは2023年3月24日から有効です。</p>
+  <p>&nbsp;プライバシーポリシーは随時更新されます。変更がないか定期的に当ページを確認することを推奨します。このプライバシーポリシーは2023年4月12日から有効です。</p>
 </div>
 <div>
   <b2><strong>Credit</strong> </b2>
   <ui>
-    <li>企画・開発：Digital Art CLUB（）</li>
+    <li>企画・開発：REL8（Digital Art CLUB）</li>
   </ui>
   <p></p>
 </div>
